--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.14",
     "next": "13.4.13",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.27",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.3.3"
   }
 }
