--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "formik": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.13",
     "postcss": "^8.4.27",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
   }
